fix missed wrap in buttons

--- a/assets/css/compiled/main.css
+++ b/assets/css/compiled/main.css
@@ -1948,6 +1948,20 @@ select {
   gap:1rem
 }
 
+.gap-x-3 {
+  -moz-column-gap:0.75rem;
+       column-gap:0.75rem
+}
+
+.gap-x-3\.5 {
+  -moz-column-gap:0.875rem;
+       column-gap:0.875rem
+}
+
+.gap-y-3 {
+  row-gap:0.75rem
+}
+
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse:0;
   margin-right:calc(0.5rem * var(--tw-space-x-reverse));
@@ -4698,6 +4712,11 @@ pre {
     flex-direction:row
   }
 
+  .sm\:gap-x-3 {
+    -moz-column-gap:0.75rem;
+         column-gap:0.75rem
+  }
+
   .sm\:overflow-hidden {
     overflow:hidden
   }
@@ -4787,6 +4806,15 @@ pre {
 
   .md\:justify-start {
     justify-content:flex-start
+  }
+
+  .md\:gap-y-3 {
+    row-gap:0.75rem
+  }
+
+  .md\:gap-x-3 {
+    -moz-column-gap:0.75rem;
+         column-gap:0.75rem
   }
 
   .md\:p-\[10vh\] {
